--- a/index.html
+++ b/index.html
@@ -75,6 +75,21 @@
             text-align: center;
             display: none;
         }
+
+        button {
+            margin: 5px;
+            padding: 5px 10px;
+            font-size: 14px;
+            cursor: pointer;
+            background-color: #ff0000;
+            color: white;
+            border: none;
+            border-radius: 5px;
+        }
+
+        button:hover {
+            background-color: #cc0000;
+        }
     </style>
 </head>
 <body>
@@ -84,26 +99,22 @@
         <div class="timer-container" id="timerBox1">
             <div class="team-name-display" id="displayTeam1" onclick="editTeamName(1)">Team 1</div>
             <input type="text" id="team1" class="team-name-input" onblur="saveTeamName(1)">
-            <div class="timer" id="timer1">60</div>
-            <button class="select-circle" onclick="selectTimer(1)"></button>
+            <div class="timer" id="timer1" onclick="selectTimer(1)">60</div>
         </div>
         <div class="timer-container" id="timerBox2">
             <div class="team-name-display" id="displayTeam2" onclick="editTeamName(2)">Team 2</div>
             <input type="text" id="team2" class="team-name-input" onblur="saveTeamName(2)">
-            <div class="timer" id="timer2">60</div>
-            <button class="select-circle" onclick="selectTimer(2)"></button>
+            <div class="timer" id="timer2" onclick="selectTimer(2)">60</div>
         </div>
         <div class="timer-container" id="timerBox3">
             <div class="team-name-display" id="displayTeam3" onclick="editTeamName(3)">Team 3</div>
             <input type="text" id="team3" class="team-name-input" onblur="saveTeamName(3)">
-            <div class="timer" id="timer3">60</div>
-            <button class="select-circle" onclick="selectTimer(3)"></button>
+            <div class="timer" id="timer3" onclick="selectTimer(3)">60</div>
         </div>
         <div class="timer-container" id="timerBox4">
             <div class="team-name-display" id="displayTeam4" onclick="editTeamName(4)">Team 4</div>
             <input type="text" id="team4" class="team-name-input" onblur="saveTeamName(4)">
-            <div class="timer" id="timer4">60</div>
-            <button class="select-circle" onclick="selectTimer(4)"></button>
+            <div class="timer" id="timer4" onclick="selectTimer(4)">60</div>
         </div>
     </div>
 
@@ -119,7 +130,7 @@
     <script>
         let selectedTimer = 1;
         let timers = { 1: 60, 2: 60, 3: 60, 4: 60 };
-        let intervals = { 1: null, 2: null, 3: null, 4: null };
+        let intervals = {};
 
         function selectTimer(timerNumber) {
             selectedTimer = timerNumber;
@@ -130,7 +141,7 @@
         function startStopTimer() {
             if (intervals[selectedTimer]) {
                 clearInterval(intervals[selectedTimer]);
-                intervals[selectedTimer] = null;
+                delete intervals[selectedTimer];
             } else {
                 intervals[selectedTimer] = setInterval(() => {
                     if (timers[selectedTimer] > 0) {
@@ -138,10 +149,17 @@
                         document.getElementById(`timer${selectedTimer}`).textContent = timers[selectedTimer];
                     } else {
                         clearInterval(intervals[selectedTimer]);
+                        delete intervals[selectedTimer];
                         alert("Tijd is om!");
                     }
                 }, 1000);
             }
+        }
+
+        function adjustTime(amount) {
+            timers[selectedTimer] += amount;
+            if (timers[selectedTimer] < 0) timers[selectedTimer] = 0;
+            document.getElementById(`timer${selectedTimer}`).textContent = timers[selectedTimer];
         }
     </script>
 </body>
