--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         const app = firebase.initializeApp(firebaseConfig);
         const database = firebase.database();
         const timerRef = database.ref('timers');
+        const teamRef = database.ref('teams');
     </script>
 
     <style>
@@ -128,38 +129,24 @@
     <button onclick="adjustTime(-20)">-20 sec</button>
 
     <script>
-        let selectedTimer = 1;
-        let timers = { 1: 60, 2: 60, 3: 60, 4: 60 };
-        let intervals = {};
-
-        function selectTimer(timerNumber) {
-            selectedTimer = timerNumber;
-            document.querySelectorAll('.timer-container').forEach(el => el.classList.remove("selected"));
-            document.querySelector(`#timerBox${timerNumber}`).classList.add("selected");
+        function editTeamName(teamNumber) {
+            let display = document.getElementById(`displayTeam${teamNumber}`);
+            let input = document.getElementById(`team${teamNumber}`);
+            display.style.display = "none";
+            input.style.display = "block";
+            input.value = display.textContent;
+            input.focus();
         }
 
-        function startStopTimer() {
-            if (intervals[selectedTimer]) {
-                clearInterval(intervals[selectedTimer]);
-                delete intervals[selectedTimer];
-            } else {
-                intervals[selectedTimer] = setInterval(() => {
-                    if (timers[selectedTimer] > 0) {
-                        timers[selectedTimer]--;
-                        document.getElementById(`timer${selectedTimer}`).textContent = timers[selectedTimer];
-                    } else {
-                        clearInterval(intervals[selectedTimer]);
-                        delete intervals[selectedTimer];
-                        alert("Tijd is om!");
-                    }
-                }, 1000);
+        function saveTeamName(teamNumber) {
+            let display = document.getElementById(`displayTeam${teamNumber}`);
+            let input = document.getElementById(`team${teamNumber}`);
+            if (input.value.trim() !== "") {
+                display.textContent = input.value;
+                teamRef.child(teamNumber).set(input.value);
             }
-        }
-
-        function adjustTime(amount) {
-            timers[selectedTimer] += amount;
-            if (timers[selectedTimer] < 0) timers[selectedTimer] = 0;
-            document.getElementById(`timer${selectedTimer}`).textContent = timers[selectedTimer];
+            input.style.display = "none";
+            display.style.display = "block";
         }
     </script>
 </body>
