--- a/index.html
+++ b/index.html
@@ -77,6 +77,21 @@
             display: none;
         }
 
+        .select-circle {
+            width: 20px;
+            height: 20px;
+            background-color: #ff0000;
+            border-radius: 50%;
+            border: none;
+            display: inline-block;
+            cursor: pointer;
+            margin-top: 10px;
+        }
+
+        .select-circle:hover {
+            background-color: #cc0000;
+        }
+
         button {
             margin: 5px;
             padding: 5px 10px;
@@ -100,22 +115,26 @@
         <div class="timer-container" id="timerBox1">
             <div class="team-name-display" id="displayTeam1" onclick="editTeamName(1)">Team 1</div>
             <input type="text" id="team1" class="team-name-input" onblur="saveTeamName(1)">
-            <div class="timer" id="timer1" onclick="selectTimer(1)">60</div>
+            <div class="timer" id="timer1">60</div>
+            <button class="select-circle" onclick="selectTimer(1)"></button>
         </div>
         <div class="timer-container" id="timerBox2">
             <div class="team-name-display" id="displayTeam2" onclick="editTeamName(2)">Team 2</div>
             <input type="text" id="team2" class="team-name-input" onblur="saveTeamName(2)">
-            <div class="timer" id="timer2" onclick="selectTimer(2)">60</div>
+            <div class="timer" id="timer2">60</div>
+            <button class="select-circle" onclick="selectTimer(2)"></button>
         </div>
         <div class="timer-container" id="timerBox3">
             <div class="team-name-display" id="displayTeam3" onclick="editTeamName(3)">Team 3</div>
             <input type="text" id="team3" class="team-name-input" onblur="saveTeamName(3)">
-            <div class="timer" id="timer3" onclick="selectTimer(3)">60</div>
+            <div class="timer" id="timer3">60</div>
+            <button class="select-circle" onclick="selectTimer(3)"></button>
         </div>
         <div class="timer-container" id="timerBox4">
             <div class="team-name-display" id="displayTeam4" onclick="editTeamName(4)">Team 4</div>
             <input type="text" id="team4" class="team-name-input" onblur="saveTeamName(4)">
-            <div class="timer" id="timer4" onclick="selectTimer(4)">60</div>
+            <div class="timer" id="timer4">60</div>
+            <button class="select-circle" onclick="selectTimer(4)"></button>
         </div>
     </div>
 
@@ -127,27 +146,5 @@
     <button onclick="adjustTime(40)">+40 sec</button>
     <button onclick="adjustTime(50)">+50 sec</button>
     <button onclick="adjustTime(-20)">-20 sec</button>
-
-    <script>
-        function editTeamName(teamNumber) {
-            let display = document.getElementById(`displayTeam${teamNumber}`);
-            let input = document.getElementById(`team${teamNumber}`);
-            display.style.display = "none";
-            input.style.display = "block";
-            input.value = display.textContent;
-            input.focus();
-        }
-
-        function saveTeamName(teamNumber) {
-            let display = document.getElementById(`displayTeam${teamNumber}`);
-            let input = document.getElementById(`team${teamNumber}`);
-            if (input.value.trim() !== "") {
-                display.textContent = input.value;
-                teamRef.child(teamNumber).set(input.value);
-            }
-            input.style.display = "none";
-            display.style.display = "block";
-        }
-    </script>
 </body>
 </html>
