--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         const timerRef = database.ref('timers');
         const teamRef = database.ref('teams');
     </script>
-    
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -75,6 +75,36 @@
             text-align: center;
             display: none;
         }
+
+        button {
+            margin: 5px;
+            padding: 5px 10px;
+            font-size: 14px;
+            cursor: pointer;
+            background-color: #ff0000;
+            color: white;
+            border: none;
+            border-radius: 5px;
+        }
+
+        button:hover {
+            background-color: #cc0000;
+        }
+
+        .select-circle {
+            width: 20px;
+            height: 20px;
+            background-color: #ff0000;
+            border-radius: 50%;
+            border: none;
+            display: inline-block;
+            cursor: pointer;
+            margin-top: 10px;
+        }
+
+        .select-circle:hover {
+            background-color: #cc0000;
+        }
     </style>
 </head>
 <body>
@@ -107,7 +137,26 @@
         </div>
     </div>
     
+    <button onclick="startStopTimer()">Start/Stop</button>
+    <button onclick="resetTimer()">Reset</button>
+    <button onclick="adjustTime(10)">+10 sec</button>
+    <button onclick="adjustTime(20)">+20 sec</button>
+    <button onclick="adjustTime(30)">+30 sec</button>
+    <button onclick="adjustTime(40)">+40 sec</button>
+    <button onclick="adjustTime(50)">+50 sec</button>
+    <button onclick="adjustTime(-20)">-20 sec</button>
+
     <script>
+        let selectedTimer = 1;
+        let timers = [60, 60, 60, 60];
+        let intervals = [null, null, null, null];
+
+        function selectTimer(timerNumber) {
+            selectedTimer = timerNumber;
+            document.querySelectorAll('.timer-container').forEach(el => el.classList.remove("selected"));
+            document.querySelector(`#timerBox${timerNumber}`).classList.add("selected");
+        }
+
         function editTeamName(teamNumber) {
             let display = document.getElementById(`displayTeam${teamNumber}`);
             let input = document.getElementById(`team${teamNumber}`);
@@ -126,6 +175,34 @@
             }
             input.style.display = "none";
             display.style.display = "block";
+        }
+
+        function adjustTime(amount) {
+            timers[selectedTimer - 1] += amount;
+            if (timers[selectedTimer - 1] < 0) timers[selectedTimer - 1] = 0;
+            document.getElementById(`timer${selectedTimer}`).textContent = timers[selectedTimer - 1];
+        }
+
+        function startStopTimer() {
+            let index = selectedTimer - 1;
+            let timerElement = document.getElementById(`timer${selectedTimer}`);
+
+            if (intervals[index]) {
+                clearInterval(intervals[index]);
+                intervals[index] = null;
+                return;
+            }
+
+            intervals[index] = setInterval(() => {
+                if (timers[index] > 0) {
+                    timers[index]--;
+                    timerElement.textContent = timers[index];
+                } else {
+                    clearInterval(intervals[index]);
+                    intervals[index] = null;
+                    alert(`Tijd is om voor ${document.getElementById(`displayTeam${selectedTimer}`).textContent}!`);
+                }
+            }, 1000);
         }
     </script>
 </body>
