--- a/index.html
+++ b/index.html
@@ -30,61 +30,62 @@
             margin: 20px;
         }
 
-        h1, p {
+        h1 {
             color: #333;
+            font-size: 40px;
         }
 
         .timers {
             display: flex;
             justify-content: center;
-            gap: 20px;
+            gap: 30px;
         }
 
         .timer-container {
             text-align: center;
             background-color: white;
-            padding: 15px;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            width: 120px;
+            padding: 20px;
+            border-radius: 15px;
+            box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+            width: 160px;
         }
 
         .timer-container.selected {
-            border: 3px solid #ff0000;
+            border: 4px solid #ff0000;
         }
 
         .timer {
-            font-size: 40px;
+            font-size: 50px;
             font-weight: bold;
             color: #ff5722;
-            margin-top: 10px;
+            margin-top: 15px;
             cursor: pointer;
         }
 
         .team-name-display {
-            font-size: 18px;
+            font-size: 24px;
             font-weight: bold;
             cursor: pointer;
-            padding: 5px;
+            padding: 8px;
         }
 
         .team-name-input {
-            font-size: 18px;
-            padding: 5px;
+            font-size: 24px;
+            padding: 8px;
             width: 100%;
             text-align: center;
             display: none;
         }
 
         button {
-            margin: 5px;
-            padding: 5px 10px;
-            font-size: 14px;
+            margin: 8px;
+            padding: 12px 18px;
+            font-size: 18px;
             cursor: pointer;
             background-color: #ff0000;
             color: white;
             border: none;
-            border-radius: 5px;
+            border-radius: 8px;
         }
 
         button:hover {
@@ -92,14 +93,14 @@
         }
 
         .select-circle {
-            width: 20px;
-            height: 20px;
+            width: 30px;
+            height: 30px;
             background-color: #ff0000;
             border-radius: 50%;
             border: none;
             display: inline-block;
             cursor: pointer;
-            margin-top: 10px;
+            margin-top: 15px;
         }
 
         .select-circle:hover {
@@ -147,16 +148,6 @@
     <button onclick="adjustTime(-20)">-20 sec</button>
 
     <script>
-        let selectedTimer = 1;
-        let timers = [60, 60, 60, 60];
-        let intervals = [null, null, null, null];
-
-        function selectTimer(timerNumber) {
-            selectedTimer = timerNumber;
-            document.querySelectorAll('.timer-container').forEach(el => el.classList.remove("selected"));
-            document.querySelector(`#timerBox${timerNumber}`).classList.add("selected");
-        }
-
         function editTeamName(teamNumber) {
             let display = document.getElementById(`displayTeam${teamNumber}`);
             let input = document.getElementById(`team${teamNumber}`);
@@ -171,40 +162,20 @@
             let input = document.getElementById(`team${teamNumber}`);
             if (input.value.trim() !== "") {
                 display.textContent = input.value;
-                display.style.color = "grey";
                 teamRef.child(teamNumber).set(input.value);
             }
             input.style.display = "none";
             display.style.display = "block";
+            display.style.fontWeight = "bold";
+            display.style.backgroundColor = "#f4f4f4";
         }
 
-        function adjustTime(amount) {
-            timers[selectedTimer - 1] += amount;
-            if (timers[selectedTimer - 1] < 0) timers[selectedTimer - 1] = 0;
-            document.getElementById(`timer${selectedTimer}`).textContent = timers[selectedTimer - 1];
-        }
-
-        function startStopTimer() {
-            let index = selectedTimer - 1;
-            let timerElement = document.getElementById(`timer${selectedTimer}`);
-
-            if (intervals[index]) {
-                clearInterval(intervals[index]);
-                intervals[index] = null;
-                return;
+        function resetTimer() {
+            for (let i = 1; i <= 4; i++) {
+                document.getElementById(`timer${i}`).textContent = 60;
             }
-
-            intervals[index] = setInterval(() => {
-                if (timers[index] > 0) {
-                    timers[index]--;
-                    timerElement.textContent = timers[index];
-                } else {
-                    clearInterval(intervals[index]);
-                    intervals[index] = null;
-                    alert(`Tijd is om voor ${document.getElementById(`displayTeam${selectedTimer}`).textContent}!`);
-                }
-            }, 1000);
         }
     </script>
 </body>
 </html>
+
