--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="nl">
 <head>
@@ -150,6 +149,8 @@
 
     <script>
         let selectedTimer = 1;
+        let timers = [60, 60, 60, 60];
+        let intervals = [null, null, null, null];
 
         function selectTimer(timerNumber) {
             selectedTimer = timerNumber;
@@ -175,14 +176,39 @@
             }
             input.style.display = "none";
             display.style.display = "block";
-            display.style.fontWeight = "bold";
-            display.style.backgroundColor = "#f4f4f4";
+        }
+
+        function adjustTime(amount) {
+            timers[selectedTimer - 1] += amount;
+            if (timers[selectedTimer - 1] < 0) timers[selectedTimer - 1] = 0;
+            document.getElementById(`timer${selectedTimer}`).textContent = timers[selectedTimer - 1];
+        }
+
+        function startStopTimer() {
+            let index = selectedTimer - 1;
+            let timerElement = document.getElementById(`timer${selectedTimer}`);
+
+            if (intervals[index]) {
+                clearInterval(intervals[index]);
+                intervals[index] = null;
+                return;
+            }
+
+            intervals[index] = setInterval(() => {
+                if (timers[index] > 0) {
+                    timers[index]--;
+                    timerElement.textContent = timers[index];
+                } else {
+                    clearInterval(intervals[index]);
+                    intervals[index] = null;
+                    alert(`Tijd is om voor ${document.getElementById(`displayTeam${selectedTimer}`).textContent}!`);
+                }
+            }, 1000);
         }
 
         function resetTimer() {
-            for (let i = 1; i <= 4; i++) {
-                document.getElementById(`timer${i}`).textContent = 60;
-            }
+            timers = [60, 60, 60, 60];
+            document.querySelectorAll('.timer').forEach((el, i) => el.textContent = timers[i]);
         }
     </script>
 </body>
