--- a/index.html
+++ b/index.html
@@ -70,13 +70,6 @@
             transition: background 0.3s, color 0.3s;
         }
 
-        .team-name-display.disabled {
-            color: gray;
-            background: #e0e0e0;
-            border-radius: 5px;
-            pointer-events: none;
-        }
-
         .team-name-input {
             font-size: 24px;
             padding: 8px;
@@ -156,6 +149,14 @@
     <button onclick="adjustTime(-20)">-20 sec</button>
 
     <script>
+        let selectedTimer = 1;
+
+        function selectTimer(timerNumber) {
+            selectedTimer = timerNumber;
+            document.querySelectorAll('.timer-container').forEach(el => el.classList.remove("selected"));
+            document.querySelector(`#timerBox${timerNumber}`).classList.add("selected");
+        }
+
         function editTeamName(teamNumber) {
             let display = document.getElementById(`displayTeam${teamNumber}`);
             let input = document.getElementById(`team${teamNumber}`);
@@ -174,25 +175,18 @@
             }
             input.style.display = "none";
             display.style.display = "block";
-            display.classList.add("disabled");
+            display.style.color = "black";  // Terug naar normale stijl
+            display.style.background = "transparent";
+            display.style.borderRadius = "0px";
         }
 
-        teamRef.on("value", snapshot => {
-            if (snapshot.exists()) {
-                let data = snapshot.val();
-                Object.keys(data).forEach(key => {
-                    let teamNumber = key.replace("team", "");
-                    let display = document.getElementById(`displayTeam${teamNumber}`);
-                    if (display) {
-                        display.textContent = data[key];
-                        display.classList.add("disabled");
-                    }
-                });
-            }
-        });
-
         function adjustTime(amount) {
-            timerRef.child(`timer${selectedTimer}`).set(amount);
+            timerRef.child(`timer${selectedTimer}`).get().then(snapshot => {
+                let time = snapshot.exists() ? snapshot.val() : 60;
+                time += amount;
+                if (time < 0) time = 0;
+                timerRef.child(`timer${selectedTimer}`).set(time);
+            });
         }
 
         function resetTimer() {
